[gd_scene load_steps=10 format=3 uid="uid://qbn0w8tbsh5j"]

[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_4flbx"]
[ext_resource type="Script" uid="uid://7snakjj7k20j" path="res://characters/player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://cxie0l50quod1" path="res://pistol/gun.tscn" id="3_i3pqv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 38.0789

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]
radius = 43.1856

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3pqv"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtel"]
bg_color = Color(0.623529, 0.866667, 0.317647, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_tory2"]
radius = 236.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x0jl3"]
radius = 65.3758

[node name="Player" type="CharacterBody2D"]
platform_floor_layers = 4294967292
script = ExtResource("1_onrkg")

[node name="HappyBoo" parent="." instance=ExtResource("1_4flbx")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_onrkg")

[node name="Gun" parent="." instance=ExtResource("3_i3pqv")]
unique_name_in_owner = true
position = Vector2(-2, -50)
rotation = -0.00659492

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_i3pqv")
debug_color = Color(0.933345, 0.247227, 0.0732985, 0.42)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -95.0
offset_top = -149.0
offset_right = 98.0
offset_bottom = -122.0
theme_override_styles/background = SubResource("StyleBoxFlat_i3pqv")
theme_override_styles/fill = SubResource("StyleBoxFlat_hqtel")
value = 100.0
show_percentage = false

[node name="MagnetBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetBox"]
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_tory2")
debug_color = Color(0.623529, 0.866667, 0.317647, 0.12549)

[node name="PickBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickBox"]
position = Vector2(2, -27)
shape = SubResource("CircleShape2D_x0jl3")
debug_color = Color(0.832708, 0.00136268, 0.939388, 0.42)
